--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.0)
 project(AllonetPort)
 
+add_subdirectory("src/allonet")
+
 # inspiration: https://github.com/saleyn/eixx/blob/master/CMakeLists.txt
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/priv)
 set(CMAKE_REQUIRED_INCLUDES ${ERLANG_EI_PATH}/src)
@@ -11,6 +13,8 @@ find_package(Erlang  REQUIRED)
 include_directories(
     SYSTEM
     ${Erlang_EI_INCLUDE_DIR}
+    "src/allonet/include"
+    "src/allonet/lib"
 )
 link_directories(
   ${Erlang_EI_LIBRARY_DIR}
@@ -18,6 +22,6 @@ link_directories(
 
 file(GLOB SOURCES src/*.c)
 add_executable(${PROJECT_NAME} ${SOURCES})
-target_link_libraries(${PROJECT_NAME} "ei" "erl_interface")
+target_link_libraries(${PROJECT_NAME} "ei" "erl_interface" "allonet")
 
 message(${Erlang_EI_LIBRARIES})
