--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # The directory Mix will write compiled artifacts to.
 /_build/
+/build
+/xcbuild
 
 # If you run "mix test --cover", coverage assets end up here.
 /cover/
