--- a/.gitmodules
+++ b/.gitmodules
@@ -4,16 +4,20 @@
 [submodule "alloapps/jukebox"]
 	path = alloapps/jukebox
 	url = https://github.com/alloverse/allo-jukebox.git
-  branch = main
+        branch = main
 [submodule "alloapps/drawing-board"]
 	path = alloapps/drawing-board
 	url = https://github.com/alloverse/allo-whiteboard.git
-  branch = master
+        branch = master
 [submodule "alloapps/clock"]
 	path = alloapps/clock
 	url = https://github.com/alloverse/allo-clock.git
-  branch = main
+        branch = main
 [submodule "alloapps/fileviewer"]
 	path = alloapps/fileviewer
 	url = https://github.com/alloverse/allo-fileviewer
-  branch = main
+        branch = main
+[submodule "alloapps/house"]
+	path = alloapps/house
+	url = https://github.com:alloverse/allo-house.git
+	branch = main
