--- a/.gitmodules
+++ b/.gitmodules
@@ -19,5 +19,5 @@
         branch = main
 [submodule "alloapps/house"]
 	path = alloapps/house
-	url = https://github.com:alloverse/allo-house.git
+	url = https://github.com/alloverse/allo-house.git
 	branch = main
