submos for marketplace so that we know what Docker builds

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/allonet"]
 	path = src/allonet
 	url = https://github.com/alloverse/allonet.git
+[submodule "marketplace"]
+	path = marketplace
+	url = https://github.com/alloverse/allo-marketplace.git
