let's try generating version header manually

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,11 @@ jobs:
         run: git lfs pull; git submodule foreach --recursive git lfs pull
       - 
         name: Generate version header
-        run: mix compile.cmake version_header
+        run: |
+          mkdir _cmake
+          cd cmake
+          cmake ..
+          make version_header
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
