--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,9 @@ jobs:
       - 
         name: Generate version header
         run: |
+          cd src/allonet
+          git fetch --all --tags
+          cd ../..
           mkdir _cmake
           cd _cmake
           cmake ..
