--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
         with:
           lfs: 'true'
           submodules: 'recursive'
+          fetch-depth: '0'
       - 
         name: Checkout LFS objects
         run: git lfs pull; git submodule foreach --recursive git lfs pull
@@ -24,7 +25,7 @@ jobs:
         name: Generate version header
         run: |
           cd src/allonet
-          git fetch --all --tags
+          git fetch --tags
           cd ../..
           mkdir _cmake
           cd _cmake
